UI of reset password is created Successfully!

--- a/src/resetPassword.html
+++ b/src/resetPassword.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <form class="reset-password">
-        <h1 class="reset-title">Nodemailer is imba as much as possible</h1>
+        <h1 class="reset-title">Nodemailer is imba</h1>
         <span>Сгенерированный пароль: xpo1c34hb2</span>
     </form>
 </body>
